--- a/src/css/components/notification.css
+++ b/src/css/components/notification.css
@@ -15,6 +15,10 @@ section: Components
   transition-duration: var(--global-duration);
   z-index: 200;
 
+  .t-dark & {
+    background-color: var(--color-card-dark--primary);
+  }
+
   @media (--md-up) {
     margin: 0 auto;
     width: 400px;
