--- a/src/css/components/table.css
+++ b/src/css/components/table.css
@@ -1,42 +1,42 @@
 .c-table {
-  border-bottom: 1px solid var(--color-table);
   border-collapse: collapse;
   border-spacing: 0;
-  display: table;
   empty-cells: show;
   max-width: 100%;
   width: 100%;
 
-  tbody {
-    tr:not(:first-child) {
-      border-top: 1px solid var(--color-table);
+  th {
+    height: 56px;
+    font-size: var(--fontSize--tiny);
+    color: color(var(--black) a(.54));
+  }
 
-      th,
-      td { font-weight: normal; }
-    }
 
-    tr td:first-child {
+  tr { border-top: 1px solid var(--color-table); }
+
+  td {
+    height: 48px;
+
+    &:first-child {
       @media (--md-up) { max-width: 12em; }
     }
-
-    tr:first-child {
-      border-bottom: 1px solid var(--black);
-      border-top: 1px solid var(--black);
-
-      th,
-      td { font-weight: bold; }
-    }
-
-    th,
-    td {
-      border-right: 1px solid var(--color-table);
-      padding: 0 5px;
-
-      @media (--md-up) { text-align: right; }
-
-      &:first-child { text-align: left; }
-    }
   }
+
+
+  th,
+  td {
+    &:first-child {
+      text-align: left;
+      padding-left: 24px;
+    }
+
+    &:last-child { padding-right: 24px; }
+
+    &:not(:first-child):not(:last-child) { padding: 0 56px 0 0; }
+
+     &:not(:first-child) { text-align: right; }
+  }
+
 
   &__label {
     color: var(--grey-700);
@@ -49,7 +49,12 @@
   &__content { font-weight: normal; }
 }
 
+/* Stacked */
+
+.c-table--stacked,
 .c-table--stack {
+  clear: both;
+
   tr {
     clear: both;
     display: table-row;
@@ -61,7 +66,9 @@
   td {
     border-right: none !important;
     display: block;
-    text-align: left;
+    height: 32px;
+    text-align: left !important;
+    padding: .5em .5rem !important;
 
     @media (--md-up) {
       display: table-cell;
@@ -89,12 +96,22 @@
 
   .c-table__label {
     display: inline-block;
+    padding: 0 .5em 0 0;
+    width: 30%;
 
     @media (--md-up) { display: none; }
   }
 
-  .c-table__content { font-size: var(--fontSize--semiMedium); }
+  .c-table__content {
+    @media (--sm) {
+      display: inline-block;
+      max-width: 67%;
+    }
+  }
 }
+
+/* Toggle */
+/* This requires a simple dropdown menu to toggle column visibility above the table */
 
 .c-table--toggle {
   .c-table__priority-6,
@@ -128,3 +145,19 @@
     @media (min-width: 70em) { display: table-cell; }
   }
 }
+
+/* Swipe */
+/* This requires the first column to persist */
+/* Also you will need two arrow buttons above the table to navigate left and right */
+/* This should manage column visibility using `.u-hide` classes */
+
+.c-table--swipe {
+  .c-table--cell-persist {
+    border-right: 2px solid var(--grey-200);
+  }
+}
+
+.c-table--fix-persist {
+  table-layout: fixed;
+}
+
