--- a/src/css/settings/motion.css
+++ b/src/css/settings/motion.css
@@ -10,15 +10,16 @@ title: Motion
   --fade-in: {
     opacity: 1;
     pointer-events: all;
-    transition: opacity var(--global-duration) ease-in-out;
+    transition: visibility 1s, opacity var(--global-duration) ease-in-out, z-index 1s;
     visibility: visible;
+    will-change: visibility, opacity, transform;
     z-index: 10;
   };
 
   --fade-out: {
     opacity: 0;
     pointer-events: none;
-    transition: visibility 0s 2s, opacity var(--global-duration) ease-in-out, z-index 0s 2s;
+    transition: visibility 1s, opacity var(--global-duration) ease-in-out, z-index 1s;
     visibility: hidden;
     will-change: visibility, opacity, transform;
     z-index: -1;
