cleanup; Baked in a11y support into elements

--- a/src/css/components/card.css
+++ b/src/css/components/card.css
@@ -50,6 +50,8 @@ section: Components
   :--fullscreen & {
     background-color: var(--color-card-dark--primary);
   }
+
+  &:empty { display: none; }
 }
 
 
