--- a/src/css/components/table.css
+++ b/src/css/components/table.css
@@ -5,15 +5,34 @@
   max-width: 100%;
   width: 100%;
 
+  caption {
+    text-align: left;
+    font-size: var(--fontSize--normalPlus);
+    height: 64px;
+    line-height: 64px;
+    padding: 0 24px;
+  }
+
+  tbody {
+    tr {
+      border-top: 1px solid var(--color-table);
+    }
+  }
+
   th {
     height: 56px;
     font-size: var(--fontSize--tiny);
     color: color(var(--black) a(.54));
+
+    .t-dark &,
+    .t-fullscreen &,
+    :--fullscreen & {
+      color: color(var(--white) a(.54));
+    }
   }
 
 
   tr {
-    border-top: 1px solid var(--color-table);
     transition: background-color var(--global-duration) ease-in-out;
 
     &:hover {
