--- a/src/css/components/toolbar.css
+++ b/src/css/components/toolbar.css
@@ -43,9 +43,7 @@
   top: 0;
   width: 48px;
 
-  & + .c-toolbar__row {
-    padding: 0 0 0 80px;
-  }
+  & + .c-toolbar__row { padding-left: 80px; }
 }
 
 
