--- a/src/css/components/toolbar.css
+++ b/src/css/components/toolbar.css
@@ -44,6 +44,11 @@
   width: 48px;
 
   & + .c-toolbar__row { padding-left: 80px; }
+
+  .c-toolbar__row--dense & {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
 }
 
 
