--- a/src/css/settings/colour.css
+++ b/src/css/settings/colour.css
@@ -344,9 +344,11 @@
 
 
   /* Tabs */
+  --color-tab: transparent;
   --color-tab--active: rgba(255, 255, 255, .1);
   --color-tab-alt--primary: var(--color-primary);
   --color-tab-alt--active: var(--color-accent);
+  --borderColor-tab--active: currentColor;
 
 
   /* Toolbar */
