--- a/src/css/components/toolbar.css
+++ b/src/css/components/toolbar.css
@@ -37,6 +37,7 @@
   .c-toolbar__button {
     height: var(--size-toolbar__button);
     left: 0;
+    line-height: 42px;
     margin: calc(calc(var(--height-toolbar) - var(--size-toolbar__button)) / 2) calc(var(--marginX-toolbar__button) / 5);
     overflow: hidden;
     position: absolute;
